# camera_calibration

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
applications/: CMakeLists.txt
applications/camera_calibration/: CMakeLists.txt
applications/camera_calibration/cmake/: FindStructure.cmake
applications/camera_calibration/generic_models/: CMakeLists.txt
applications/camera_calibration/generic_models/src/: central_generic.h  central_generic_unprojection_jacobian.h  main.cc  noncentral_generic.h  noncentral_generic_unprojection_jacobian.h  util.h
applications/camera_calibration/patterns/: pattern_resolution_17x24_segments_16_apriltag_0-self.yaml  pattern_resolution_17x24_segments_16_apriltag_0.yaml  pattern_resolution_17x24_segments_16_apriltag_1.yaml  pattern_resolution_17x24_segments_16_apriltag_2.yaml  pattern_resolution_25x36_segments_16_apriltag_6.yaml  pattern_resolution_25x36_segments_16_apriltag_7.yaml  pattern_resolution_25x36_segments_16_apriltag_8.yaml  pattern_resolution_50x72_segments_16_apriltag_3.yaml  pattern_resolution_50x72_segments_16_apriltag_4.yaml  pattern_resolution_50x72_segments_16_apriltag_5.yaml
applications/camera_calibration/scripts/: create_calibration_pattern.py  derive_jacobians.py  optimizer_builder.py
applications/camera_calibration/src/camera_calibration/: b_spline.h  calibration.cc  calibration.h  calibration_report.cc  calibration_report.h  cuda_shims.h  dataset.cc  dataset.h  fitting_report.h  hash_vec2i.h  main.cc  report_from_data.cc  util.cc  util.h
applications/camera_calibration/src/camera_calibration/bundle_adjustment/: ba_state.cc  ba_state.h  cuda_joint_optimization.cc  cuda_joint_optimization.cu  cuda_joint_optimization.cuh  cuda_joint_optimization.h  joint_optimization.cc  joint_optimization.h  joint_optimization_jacobians.h
applications/camera_calibration/src/camera_calibration/calibration_initialization/: dense_initialization.cc  dense_initialization.h
applications/camera_calibration/src/camera_calibration/cuda/: cuda_matrix.cuh  cuda_util.cuh
applications/camera_calibration/src/camera_calibration/feature_detection/: cpu_refinement_by_matching.h  cpu_refinement_by_symmetry.h  cuda_refinement_by_matching.cc  cuda_refinement_by_matching.cu  cuda_refinement_by_matching.cuh  cuda_refinement_by_matching.h  cuda_refinement_by_symmetry.cc  cuda_refinement_by_symmetry.cu  cuda_refinement_by_symmetry.cuh  cuda_refinement_by_symmetry.h  cuda_util.cu  cuda_util.cuh  feature_detector.h  feature_detector_tagged_pattern.cc  feature_detector_tagged_pattern.h  feature_refinement.h
applications/camera_calibration/src/camera_calibration/image_input/: image_input.cc  image_input.h  image_input_realsense.cc  image_input_realsense.h  image_input_structure.cc  image_input_structure.h  image_input_v4l2.cc  image_input_v4l2.h
applications/camera_calibration/src/camera_calibration/io/: calibration_io.cc  calibration_io.h  io_util.h
applications/camera_calibration/src/camera_calibration/local_parametrizations/: direction_parametrization.h  line_parametrization.h  quaternion_parametrization.h
applications/camera_calibration/src/camera_calibration/models/: all_models.h  camera_model.h  central_generic.cc  central_generic.h  central_generic_jacobians.cc  central_grid.h  central_opencv.cc  central_opencv.h  central_radial.cc  central_radial.h  central_thin_prism_fisheye.cc  central_thin_prism_fisheye.h  cuda_camera_model.cuh  cuda_central_generic_model.cuh  noncentral_generic.cc  noncentral_generic.h  noncentral_generic_jacobians.cc  parametric.cc  parametric.h
applications/camera_calibration/src/camera_calibration/relative_pose_initialization/: algorithms.h  central_camera_3d_target.cc  central_camera_planar_target.cc  noncentral_camera_3d_target.cc  noncentral_camera_planar_target.cc
applications/camera_calibration/src/camera_calibration/test/: b_spline_test.cc  camera_unique_representation_test.cc  central_generic_test.cc  central_opencv_test.cc  central_radial_test.cc  central_thin_prism_fisheye_test.cc  feature_detection_test.cc  io_test.cc  main.cc  main.h  noncentral_generic_test.cc  opengv_test.cc  optimization_test.cc  relative_pose_initialization_test.cc  util.h  util_test.cc
applications/camera_calibration/src/camera_calibration/tools/: bundle_adjustment.cc  compare_calibrations.cc  compare_point_clouds.cc  convert_dataset.cc  create_legends.cc  intersect_datasets.cc  localization_accuracy_test.cc  render_synthetic_dataset.cc  stereo_depth_estimation.cc  tools.h  visualize_calibration.cc
applications/camera_calibration/src/camera_calibration/ui/: calibration_window.cc  calibration_window.h  live_image_consumer.cc  live_image_consumer.h  main_window.cc  main_window.h  pattern_display.cc  pattern_display.h  settings_window.cc  settings_window.h
cmake/: FindEigen3.cmake
libvis/resources/: resources.qrc
libvis/src/bin2c/: main.cc
libvis/src/libvis/: any_image.h  camera.h  camera_frustum.h  camera_frustum_opengl.h  command_line_parser.cc  command_line_parser.h  dlt.h  eigen.h  geometry.h  glew.cc  glew.h  image.cc  image.h  image_cache.h  image_display.cc  image_display.h  image_display_qt_widget.cc  image_display_qt_widget.h  image_display_qt_window.cc  image_display_qt_window.h  image_frame.h  image_io.cc  image_io.h  image_io_libpng.cc  image_io_libpng.h  image_io_netpbm.cc  image_io_netpbm.h  image_io_qt.cc  image_io_qt.h  image_template_specializations.h  libvis.cc  libvis.h  lm_optimizer.h  lm_optimizer_back_substitution_accumulator.h  lm_optimizer_cost_accumulator.h  lm_optimizer_gradient_descent.h  lm_optimizer_impl.h  lm_optimizer_jtj_accumulator_base.h  lm_optimizer_residual_sum_and_jacobian_accumulator.h  lm_optimizer_update_accumulator.h  (+42 more)
libvis/src/libvis/calibration/: checkerboard.h  tagged_checkerboard.h
libvis/src/libvis/cuda/: cholesky_solver.h  cuda_auto_tuner.h  cuda_buffer.cu  cuda_buffer.cuh  cuda_buffer.h  cuda_buffer_inl.h  cuda_matrix.cuh  cuda_unprojection_lookup.cuh  cuda_unprojection_lookup.h  cuda_util.cuh  cuda_util.h  patch_match_stereo.cc  patch_match_stereo.cu  (+15 more)
(+21 files in other folders)
